--- a/Web.config
+++ b/Web.config
@@ -5,10 +5,10 @@
   -->
 <configuration>
 	<connectionStrings>
-  <!--<add name="SchoolCS" connectionString="Data Source=.\chetan;Initial Catalog=SchoolSysDB;Persist Security Info=True;User ID=sa;Password=haobijam"
-   providerName="Microsoft.Data.SqlClient" />-->
-  <add name="SchoolCS" connectionString="Data Source=.\sqlexpress;Initial Catalog=SchoolSysDB;Persist Security Info=True;User ID=sa;Password=haobijam"
-   providerName="System.Data.SqlClient" />
+  <add name="SchoolCS" connectionString="Data Source=.\chetan;Initial Catalog=SchoolSysDB;Persist Security Info=True;User ID=sa;Password=haobijam"
+   providerName="Microsoft.Data.SqlClient" />
+  <!--<add name="SchoolCS" connectionString="Data Source=.\sqlexpress;Initial Catalog=SchoolSysDB;Persist Security Info=True;User ID=sa;Password=haobijam"
+   providerName="System.Data.SqlClient" />-->
  </connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.8" />
