--- a/bin/SchoolManagementProject.dll.config
+++ b/bin/SchoolManagementProject.dll.config
@@ -5,8 +5,10 @@
   -->
 <configuration>
 	<connectionStrings>
-  <add name="SchoolCS" connectionString="Data Source=.\chetan;Initial Catalog=SchoolSysDB;Persist Security Info=True;User ID=sa;Password=haobijam;TrustServerCertificate=True"
-   providerName="Microsoft.Data.SqlClient" />
+		<!--<add name="SchoolCS" connectionString="Data Source=.\chetan;Initial Catalog=SchoolSysDB;Persist Security Info=True;User ID=sa;Password=haobijam;TrustServerCertificate=True"
+		 providerName="Microsoft.Data.SqlClient" />-->
+		<add name="SchoolCS" connectionString="Data Source=.\sqlexpress;Initial Catalog=SchoolSysDB;Persist Security Info=True;User ID=sa;Password=haobijam;TrustServerCertificate=True"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.8" />
